--- a/index.html
+++ b/index.html
@@ -323,7 +323,55 @@
 		</div>
 	</div>
     <footer>
-        
+        <div class="container">
+            <div class="row">
+                    <div class="col-lg-2">
+                        <div class="about d-flex flex-column justify-content-between">
+                            <div class="footer-title">О компании</div>
+                            <a href="">О нас</a>
+                            <a href="">Компания</a>
+                            <a href="">История</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="services d-flex flex-column justify-content-between">
+                            <div class="footer-title">Обслуживание клиентов</div>
+                            <a href="">Условия оплаты</a>
+                            <a href="">Условия доставки</a>
+                            <a href="">Условия возврата</a>
+                            <a href="">Условия пользования</a>
+                            <a href="">Политика конфиденциальности</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="socials">
+                            <div class="footer-title">Viled в соцсетях</div>
+                            <ul class="socials-list">
+                                <li class="socials-item"><a href=""><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9 1.62225C11.403 1.62225 11.688 1.63125 12.6375 1.67475C15.0765 1.78575 16.2157 2.943 16.3267 5.364C16.3702 6.31275 16.3785 6.59775 16.3785 9.00075C16.3785 11.4045 16.3695 11.6888 16.3267 12.6375C16.215 15.0563 15.0788 16.2157 12.6375 16.3267C11.688 16.3702 11.4045 16.3792 9 16.3792C6.597 16.3792 6.312 16.3702 5.36325 16.3267C2.91825 16.215 1.785 15.0525 1.674 12.6368C1.6305 11.688 1.6215 11.4037 1.6215 9C1.6215 6.597 1.63125 6.31275 1.674 5.36325C1.78575 2.943 2.922 1.785 5.36325 1.674C6.31275 1.63125 6.597 1.62225 9 1.62225ZM9 0C6.55575 0 6.24975 0.0105 5.28975 0.054C2.02125 0.204 0.20475 2.0175 0.05475 5.289C0.0105 6.24975 0 6.55575 0 9C0 11.4443 0.0105 11.751 0.054 12.711C0.204 15.9795 2.0175 17.796 5.289 17.946C6.24975 17.9895 6.55575 18 9 18C11.4443 18 11.751 17.9895 12.711 17.946C15.9765 17.796 17.7975 15.9825 17.9452 12.711C17.9895 11.751 18 11.4443 18 9C18 6.55575 17.9895 6.24975 17.946 5.28975C17.799 2.02425 15.9832 0.20475 12.7118 0.05475C11.751 0.0105 11.4443 0 9 0V0ZM9 4.3785C6.44775 4.3785 4.3785 6.44775 4.3785 9C4.3785 11.5522 6.44775 13.6222 9 13.6222C11.5522 13.6222 13.6215 11.553 13.6215 9C13.6215 6.44775 11.5522 4.3785 9 4.3785ZM9 12C7.34325 12 6 10.6575 6 9C6 7.34325 7.34325 6 9 6C10.6567 6 12 7.34325 12 9C12 10.6575 10.6567 12 9 12ZM13.8045 3.11625C13.2075 3.11625 12.7238 3.6 12.7238 4.19625C12.7238 4.7925 13.2075 5.27625 13.8045 5.27625C14.4008 5.27625 14.8837 4.7925 14.8837 4.19625C14.8837 3.6 14.4008 3.11625 13.8045 3.11625Z" fill="black"/>
+                                    </svg></a></li>
+                                <li class="socials-item"><a href=""><svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2.25 6H0V9H2.25V18H6V9H8.7315L9 6H6V4.74975C6 4.0335 6.144 3.75 6.83625 3.75H9V0H6.144C3.447 0 2.25 1.18725 2.25 3.46125V6Z" fill="black"/>
+                                    </svg>
+                                    </a></li>
+                                <li class="socials-item"><a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0C4.47833 0 0 4.47667 0 10C0 15.5225 4.47833 20 10 20C15.5225 20 20 15.5225 20 10C20 4.47667 15.5225 0 10 0ZM12.6867 14.8925C12.8433 15.0033 13.045 15.0308 13.225 14.9633C13.4042 14.895 13.5367 14.7408 13.5767 14.5542C13.9992 12.5692 15.0242 7.54417 15.4083 5.73917C15.4375 5.6025 15.3892 5.46083 15.2825 5.37C15.175 5.27917 15.0267 5.25333 14.895 5.30167C12.8567 6.05667 6.57917 8.41167 4.01333 9.36083C3.85083 9.42167 3.745 9.5775 3.75 9.75C3.75583 9.92167 3.87167 10.0708 4.03833 10.1208C5.18917 10.465 6.69917 10.9442 6.69917 10.9442C6.69917 10.9442 7.405 13.0758 7.7725 14.1592C7.81917 14.2958 7.92583 14.4025 8.06583 14.4392C8.20667 14.4758 8.35583 14.4375 8.46083 14.3383C9.05167 13.7808 9.965 12.9183 9.965 12.9183C9.965 12.9183 11.7017 14.1908 12.6867 14.8925ZM7.33417 10.6742L8.15083 13.3667L8.3325 11.6617C8.3325 11.6617 11.485 8.8175 13.2833 7.19667C13.3358 7.14917 13.3425 7.06917 13.2992 7.01333C13.2558 6.9575 13.1758 6.94417 13.1167 6.9825C11.0333 8.3125 7.33417 10.6742 7.33417 10.6742Z" fill="black"/>
+                                    </svg></a></li>
+                                <li class="socials-item"><a href=""><svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9.8715 11.2455C10.3282 11.2455 10.515 10.941 10.5097 10.5592C10.4865 9.1215 11.0452 8.3475 12.054 9.35625C13.17 10.4722 13.401 11.2455 14.7562 11.2455H17.1562C17.7623 11.2455 18.0007 11.0505 18.0007 10.7445C18.0007 10.0972 16.935 8.955 16.032 8.1165C14.7675 6.94275 14.7083 6.915 15.7972 5.502C17.148 3.74775 18.915 1.5 17.352 1.5H14.3663C13.7873 1.5 13.7452 1.82625 13.539 2.31225C12.7928 4.0725 11.3745 6.3525 10.836 6.00375C10.2727 5.64 10.5307 4.19925 10.5735 2.058C10.5847 1.4925 10.5817 1.10475 9.71775 0.90375C9.246 0.795 8.787 0.75 8.361 0.75C6.65625 0.75 5.48025 1.46475 6.1485 1.58925C7.32675 1.809 7.2135 4.35825 6.939 5.45925C6.4605 7.37625 4.662 3.94125 3.91275 2.2305C3.732 1.8195 3.6765 1.5 3.0315 1.5H0.59025C0.22125 1.5 0 1.62 0 1.887C0 2.3385 2.22 6.927 4.3395 9.2145C6.4065 11.4457 8.4495 11.2455 9.8715 11.2455Z" fill="black"/>
+                                    </svg></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                <div class="col-lg-4">
+                    <div class="download">
+                        <a href=""><img src="./assets/GooglePlay.png" alt=""></a>
+                        <a href=""><img src="./assets/AppStore.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        <div class="copyright">© Copyright 2019 VILED. Все права защищены</div>
+        </div>
     </footer>
 </body>
 </html>
