--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<link rel="stylesheet" href="./style/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./dist/bundle.js" defer></script>
     <title>VILED</title>
 </head>
@@ -127,18 +130,89 @@
             </div>
         </div>
         <div class="container">
-			<div class="row">
-				<div class="aside col-3 col-xl-2 d-none d-lg-block">
+			<div class="row" id="body-row">
+				<div class="aside col-3 col-xl-2 d-none d-lg-block sidebar-expanded" id="sidebar-container">
 					<div class="filter">
 						<div class="filter-title">
-							<h5>Фильтр</h5>
+							Выбранные фильтры
 						</div>
-						<div class="filter-price">
-							<div class="filter-price_title">
-								Цена
-							</div>
+                        <div class="filter-block brands-filter">
+                            <a href="#brands" data-toggle="collapse" aria-expanded="false" aria-controls="#brands" class="filter-btn flex-column align-items-start">
+                                <div class="d-flex w-100 justify-content-start align-items-center">
+                                   <div class="brands-filter_title menu-collapsed">
+                                        Бренды
+                                    </div>
+                                    <i id="collapse-icon" class="fas fa-angle-down ml-auto"></i>
+                                </div>
+                            </a>
+
+                            <div id="brands" class="collapse sidebar-submenu">
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="1"> Alexander McQueen</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="2"> Brunello Cucinelli</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="3"> Christian Louboutin</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="4"> Dolce&Gabbana</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="5"> Fratelli Rossetti</label></div>
+                            </div>
+                        </div>
+                        <div class="filter-block shoes-filter">
+                            <a href="#shoes" data-toggle="collapse" aria-expanded="false" aria-controls="#shoes" class="filter-btn flex-column align-items-start">
+                                <div class="d-flex w-100 justify-content-start align-items-center">
+                                   <div class="shoes-filter_title menu-collapsed">
+                                        Обувь
+                                    </div>
+                                    <i id="collapse-icon" class="fas fa-angle-down ml-auto"></i>
+                                </div>
+                            </a>
+                            <div id="shoes" class="collapse sidebar-submenu">
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="1"> Балетки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="2"> Босоножки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="3"> Ботинки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="4"> Кроссовки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="5"> Лоферы</label></div>
+                            </div>
+                        </div>
+                        <div class="filter-block view-filter">
+                            <a href="#view" data-toggle="collapse" aria-expanded="false" aria-controls="#view" class="filter-btn flex-column align-items-start">
+                                <div class="d-flex w-100 justify-content-start align-items-center">
+                                   <div class="view-filter_title menu-collapsed">
+                                        Вид
+                                    </div>
+                                    <i id="collapse-icon" class="fas fa-angle-down ml-auto"></i>
+                                </div>
+                            </a>
+                            <div id="view" class="collapse sidebar-submenu">
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="1"> Ботинки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="2"> Лоферы</label></div>
+                            </div>
+                        </div>
+                        <div class="filter-block color-filter">
+                            <a href="#color" data-toggle="collapse" aria-expanded="false" aria-controls="#color" class="filter-btn flex-column align-items-start">
+                                <div class="d-flex w-100 justify-content-start align-items-center">
+                                   <div class="color-filter_title menu-collapsed">
+                                        Цвет
+                                    </div>
+                                    <i id="collapse-icon" class="fas fa-angle-down ml-auto"></i>
+                                </div>
+                            </a>
+                            <div id="color" class="collapse sidebar-submenu">
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="1"> Белый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="2"> Бежевый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="3"> Серый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="4"> Красный</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="5"> Черный</label></div>
+                            </div>
+                        </div>
+                        <div class="filter-block filter-price">
+							<a href="#price" data-toggle="collapse" aria-expanded="false" aria-controls="#price" class="filter-btn flex-column align-items-start">
+                                <div class="d-flex w-100 justify-content-start align-items-center">
+                                   <div class="price-filter_title menu-collapsed">
+                                        Цена
+                                    </div>
+                                    <i id="collapse-icon" class="fas fa-angle-down ml-auto"></i>
+                                </div>
+                            </a>
 							<form>
-								<div class="filter-price_range">
+								<div id="price" class="filter-price_range collapse sidebar-submenu">
 									<div class="filter-price_input-wrapper">
 										<label for="min" class="filter-price_label">от</label>
 										<input id="min" class="filter-price_input">
@@ -148,13 +222,6 @@
 										<input id="max" class="filter-price_input"></div>
 								</div>
 							</form>
-						</div>
-						<div class="filter-check">
-							<label class="filter-check_label">
-								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
-								<span class="filter-check_checkmark"></span>
-								<span class="filter-check_label-text">Акция</span>
-							</label>
 						</div>
 					</div>
 				</div>
