feat: add brand and color filter

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                             </a>
 
                             <div id="brands" class="collapse sidebar-submenu">
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="1"> Alexander McQueen</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="2"> Brunello Cucinelli</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="3"> Christian Louboutin</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="4"> Dolce&Gabbana</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands[]" value="5"> Fratelli Rossetti</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Alexander McQueen"></span> Alexander McQueen</label></div>
+                                <div class="checkbox menu-collapsed"><label id="brunello"><input type="checkbox" name="brands" value="Brunello Cucinelli"> Brunello Cucinelli</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Christian Louboutin"> Christian Louboutin</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Dolce&Gabbana"> Dolce&Gabbana</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Fratelli Rossetti"> Fratelli Rossetti</label></div>
                             </div>
                         </div>
                         <div class="filter-block shoes-filter">
@@ -164,11 +164,11 @@
                                 </div>
                             </a>
                             <div id="shoes" class="collapse sidebar-submenu">
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="1"> Балетки</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="2"> Босоножки</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="3"> Ботинки</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="4"> Кроссовки</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes[]" value="5"> Лоферы</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Балетки"> Балетки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Босоножки"> Босоножки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Ботинки"> Ботинки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Кроссовки"> Кроссовки</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Лоферы"> Лоферы</label></div>
                             </div>
                         </div>
                         <div class="filter-block view-filter">
@@ -195,11 +195,11 @@
                                 </div>
                             </a>
                             <div id="color" class="collapse sidebar-submenu">
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color[0]" value="1"><span class="filter-check_checkmark"></span> Белый</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color[1]" value="2"> Бежевый</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color[2]" value="3"> Серый</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color[3]" value="4"> Красный</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color[4]" value="5"> Черный</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Белый"> Белый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Бежевый"> Бежевый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Серый"> Серый</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Красный"> Красный</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Черный"> Черный</label></div>
                             </div>
                         </div>
                         <div class="filter-block filter-price">
