--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
                     <div class="col">
                         <div class="navbar-wrapper  d-flex justify-content-between align-items-center">
                             <div class="left-side col-md-5 d-flex justify-content-left align-items-center">
-                                <div class="language-wrapper">
-                                    <select name="language" id="language">
-                                        <option value="russian" selected="selected"></option>
-                                        <option value="english"></option>
-                                        <option value="kazakh"></option>
-                                    </select>
-                                </div>
                                 <div class="currency-wrapper">
-                                    <select name="currency" id="currency" value="">
-                                        <option value="ru">Россия, ₽</option>
-                                        <option value="kz" selected="selected">Казахстан, ₸</option>
-                                    </select>
+                                        <div class="ru" value="ru"><img src="./assets/languages/ru.png" alt=""> Россия, ₽</div>
                                 </div>
                                 <div class="categories">
                                     <a href="/" class="women active">Женщины</a>
@@ -123,7 +113,8 @@
         <div class="sort-wrapper d-flex align-items-center">
             <div class="container">
                 <div class="sort">
-                    <a href="/" class="sort-cards"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="" id="sort" class="sort-cards">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.35397 7.354L4.99797 4.71V16.5C4.99797 16.6326 5.05065 16.7598 5.14442 16.8536C5.23819 16.9473 5.36537 17 5.49797 17C5.63058 17 5.75776 16.9473 5.85153 16.8536C5.94529 16.7598 5.99797 16.6326 5.99797 16.5V4.705L8.64697 7.355C8.74086 7.44875 8.86814 7.50137 9.00083 7.50128C9.13351 7.50118 9.26072 7.44839 9.35447 7.3545C9.44823 7.26061 9.50084 7.13333 9.50075 7.00065C9.50066 6.86796 9.44786 6.74075 9.35397 6.647L5.86397 3.157L5.85397 3.147C5.80754 3.10042 5.75236 3.06346 5.69162 3.03823C5.63087 3.01301 5.56575 3.00001 5.49997 3H5.49797C5.42492 2.99998 5.35276 3.01601 5.28658 3.04694C5.2204 3.07787 5.16182 3.12295 5.11497 3.179L1.64597 6.647C1.59955 6.69349 1.56274 6.74866 1.53764 6.80938C1.51254 6.87009 1.49965 6.93516 1.49969 7.00085C1.49974 7.06655 1.51273 7.1316 1.53791 7.19227C1.5631 7.25295 1.59998 7.30808 1.64647 7.3545C1.69296 7.40092 1.74814 7.43773 1.80885 7.46283C1.86957 7.48793 1.93463 7.50082 2.00033 7.50078C2.06602 7.50073 2.13107 7.48775 2.19175 7.46256C2.25243 7.43738 2.30755 7.40049 2.35397 7.354ZM17.647 12.646L15.003 15.29V3.5C15.003 3.36739 14.9503 3.24021 14.8565 3.14645C14.7628 3.05268 14.6356 3 14.503 3C14.3704 3 14.2432 3.05268 14.1494 3.14645C14.0557 3.24021 14.003 3.36739 14.003 3.5V15.295L11.353 12.645C11.3065 12.5986 11.2513 12.5618 11.1906 12.5367C11.1299 12.5116 11.0648 12.4987 10.9991 12.4987C10.8664 12.4988 10.7392 12.5516 10.6455 12.6455C10.5517 12.7394 10.4991 12.8667 10.4992 12.9994C10.4993 13.132 10.5521 13.2592 10.646 13.353L14.136 16.843L14.146 16.853C14.1926 16.8996 14.2479 16.9366 14.3089 16.9618C14.3698 16.987 14.435 17 14.501 17H14.503C14.576 16.9999 14.6482 16.9839 14.7143 16.953C14.7805 16.922 14.8391 16.877 14.886 16.821L18.354 13.353C18.4017 13.3069 18.4398 13.2517 18.466 13.1907C18.4922 13.1297 18.506 13.0641 18.5066 12.9977C18.5072 12.9313 18.4945 12.8655 18.4694 12.804C18.4442 12.7426 18.4071 12.6867 18.3602 12.6398C18.3132 12.5929 18.2574 12.5557 18.1959 12.5306C18.1345 12.5054 18.0687 12.4928 18.0023 12.4934C17.9359 12.494 17.8703 12.5077 17.8093 12.5339C17.7483 12.5602 17.6931 12.5982 17.647 12.646Z" fill="black"/>
                         </svg>Сортировка</a>
                 </div>
@@ -149,10 +140,10 @@
                             <div id="brands" class="collapse sidebar-submenu">
                                 <div class="search filter-search">
                                     <div class="filter-search-wrapper">
-                                        <input class="filter-search-wrapper_input" type="text" placeholder="Поиск бренда"/>
+                                        <input id="brandsInput" class="brands-search-wrapper_input" type="text" placeholder="Поиск бренда"/>
                                     </div>
                                 </div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Alexander McQueen"></span> Alexander McQueen</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Alexander McQueen"> Alexander McQueen</label></div>
                                 <div class="checkbox menu-collapsed"><label id="brunello"><input type="checkbox" name="brands" value="Brunello Cucinelli" checked> Brunello Cucinelli</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Christian Louboutin"> Christian Louboutin</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Dolce&Gabbana" checked> Dolce&Gabbana</label></div>
@@ -171,7 +162,7 @@
                             <div id="shoes" class="collapse sidebar-submenu">
                                 <div class="search filter-search">
                                     <div class="filter-search-wrapper">
-                                        <input class="filter-search-wrapper_input" type="text" placeholder="Поиск группы"/>
+                                        <input id="shoesInput" class="shoes-search-wrapper_input" type="text" placeholder="Поиск группы"/>
                                     </div>
                                 </div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="shoes" value="Балетки" checked> Балетки</label></div>
@@ -191,11 +182,6 @@
                                 </div>
                             </a>
                             <div id="kind" class="collapse sidebar-submenu">
-                                <div class="search filter-search">
-                                    <div class="filter-search-wrapper">
-                                        <input class="filter-search-wrapper_input" type="text" placeholder="Поиск группы"/>
-                                    </div>
-                                </div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="kind[]" value="1"> Ботинки</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="kind[]" value="2"> Лоферы</label></div>
                             </div>
@@ -210,11 +196,6 @@
                                 </div>
                             </a>
                             <div id="color" class="collapse sidebar-submenu">
-                                <div class="search filter-search">
-                                    <div class="filter-search-wrapper">
-                                        <input class="filter-search-wrapper_input" type="text" placeholder="Поиск по цвету"/>
-                                    </div>
-                                </div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Белый"> Белый</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Бежевый"> Бежевый</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="color" value="Серый"> Серый</label></div>
@@ -389,17 +370,6 @@
         </div>
     </div>
     </main>
-    <div class="cart">
-		<div class="cart-body">
-			<div class="cart-title">Корзина</div>
-			<div class="cart-total">Общая сумма: <span>0</span> руб</div>
-			<div class="cart-wrapper">
-			</div>
-			<button class="btn btn-primary cart-confirm">Оформить заказ</button>
-			<div class="cart-close">
-			</div>
-		</div>
-	</div>
     <footer>
         <div class="container">
             <div class="row">
