feat: add filter tags

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 						<div class="filter-title">
 							Выбранные фильтры
 						</div>
+                        <div id="filterContent" class="filter-tags">
+
+                        </div>
                         <div class="filter-block brands-filter">
                             <a href="#brands" data-toggle="collapse" aria-expanded="false" aria-controls="#brands" class="filter-btn flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-start align-items-center">
@@ -148,9 +151,9 @@
                                     </div>
                                 </div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Alexander McQueen"> Alexander McQueen</label></div>
-                                <div class="checkbox menu-collapsed"><label id="brunello"><input type="checkbox" name="brands" value="Brunello Cucinelli" checked> Brunello Cucinelli</label></div>
+                                <div class="checkbox menu-collapsed"><label id="brunello"><input type="checkbox" name="brands" value="Brunello Cucinelli" > Brunello Cucinelli</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Christian Louboutin"> Christian Louboutin</label></div>
-                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Dolce&Gabbana" checked> Dolce&Gabbana</label></div>
+                                <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Dolce&Gabbana" > Dolce&Gabbana</label></div>
                                 <div class="checkbox menu-collapsed"><label><input type="checkbox" name="brands" value="Fratelli Rossetti"> Fratelli Rossetti</label></div>
                             </div>
                         </div>
